[package]
name = "vnc"
version = "0.4.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
documentation = "https://whitequark.github.io/rust-vnc/vnc"
description = "An implementation of VNC protocol, client state machine, a client and a proxy"
edition = "2018"

[features]
apple-auth = ["md5", "aes", "num-bigint", "rand_core", "num-traits"]

[dependencies]
log = "0.3"
byteorder = "0.5"
flate2 = "0.2.13"
md5 = { version = "0.7", optional = true }
aes = { version = "0.8.1", optional = true }
num-bigint = { version = "0.4.3", optional = true, features = ["rand"] }
rand_core = { version = "0.6.4", optional = true, features = ["getrandom"] }
num-traits = { version = "0.2.15", optional = true }

[workspace]
members = ["client", "proxy"]
