[package]
name = "vnc-client"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
description = "A VNC client"
edition = "2018"

[features]
apple-auth = ["vnc/apple-auth"]

[[bin]]
name = "rvncclient"
path = "main.rs"

[dependencies]
log = "0.4.17"
byteorder = "1.4.3"
env_logger = "0.7"
clap = "4.0"
sdl2 = "0.35"
x11 = "2.20"

[dependencies.vnc]
path = ".."
version = "0.4"
